--- a/source/_posts/图片测试.md
+++ b/source/_posts/图片测试.md
@@ -4,4 +4,4 @@ date: 2020-10-07T13:00:35.838Z
 ---
 
 
-![](/images/th-1-.jpeg)
+![](https:/cdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/source/images/th.jpeg)
